Added ball gauge. Fixed gauge scaling. Started fixing meter scaling.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 	<canvas class="canvasStyle" id="gauge-sector">
 	</canvas>
 	
+	<canvas class="canvasStyle" id="gauge-ball">
+	</canvas>
+	
 	<canvas class="canvasStyle" id="meter">
 	</canvas>
 	
@@ -48,6 +51,7 @@
 	<canvas class="canvasStyle" id="indicator-stock">
 	</canvas>
 	
+  <script src="scripts/ball-gauge.js"></script>
   <script src="scripts/stock-indicator.js"></script>
   <script src="scripts/indicator.js"></script>
   <script src="scripts/meter.js"></script>
